--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 ./optimized_resume.docx
 ./optimized_resume.doc
 ./optimized_resume.txt
-
+./Rahul_Resume.pdf
+./resume_text.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
